fixed conf file

--- a/config/simul.config
+++ b/config/simul.config
@@ -5,19 +5,24 @@ n_sites: 70
 n_regions: 1
 bulk_mean_depth: 330
 seq_err: 0.01
-birth_rate: 0.55
-death_rate: 0.45
+birth_rate: 0.3
+death_rate: 0.1
 max_cn: 10
 var_cp_prob: 0.5
-n_cells: 300
+n_cells: 100
 sc_mean_depth: 29
 dropout_rate: 0.1
 randomize_dropout: 0
 bursty_prob: 0.1
+sc_bursty_alpha0: 0.05
+sc_bursty_beta0: 0.05
 sc_error_distn_variance_factor: 1.0
 beta_binomial_hp_max: 10
 randomize_branching: 0
 randomize_cf: 1
 min_cf: 0.05
 snv_sc_sparsity: 1
+n_genes: 100
+zero_inflation_prob: 0.05
+nb_inverse_dispersion: 10
 output_path: /home/zemp/kth/thesis/_output/simul
