new simulation params

--- a/config/simul.config
+++ b/config/simul.config
@@ -5,13 +5,13 @@ n_sites: 8
 n_regions: 1
 bulk_mean_depth: 330
 seq_err: 0.01
-birth_rate: 0.3
-death_rate: 0.1
-max_cn: 10
-var_cp_prob: 0.5
+birth_rate: 0.4
+death_rate: 0.2
+max_cn: 6
+var_cp_prob: 0.4
 n_cells: 13
 sc_mean_depth: 29
-dropout_rate: 0.1
+dropout_rate: 0.2
 randomize_dropout: 0
 bursty_prob: 0.1
 sc_bursty_alpha0: 0.05
@@ -29,5 +29,7 @@ nb_inv_dispersion_shape: 1
 nb_inv_dispersion_scale: 4
 depth_size_min: 500
 depth_size_max: 10000
+gene_copy_expr_prob_alpha: 10
+gene_copy_expr_prob_beta: 1
 output_path: /home/zemp/kth/thesis/_output/simul
 genecode_path: /home/zemp/kth/thesis/data/gencode_v19_gen_pos.complete.txt
