--- a/config/simul.config
+++ b/config/simul.config
@@ -1,7 +1,7 @@
 seed: 42
 num_branches: 3
 max_depth: 3
-n_sites: 8
+n_sites: 67
 n_regions: 1
 bulk_mean_depth: 330
 seq_err: 0.01
@@ -9,7 +9,7 @@ birth_rate: 0.4
 death_rate: 0.2
 max_cn: 6
 var_cp_prob: 0.4
-n_cells: 13
+n_cells: 100
 sc_mean_depth: 29
 dropout_rate: 0.2
 randomize_dropout: 0
@@ -22,14 +22,15 @@ randomize_branching: 0
 randomize_cf: 1
 min_cf: 0.05
 snv_sc_sparsity: 1
-n_genes: 20
-zero_inflation_alpha: 2
+n_genes: 1000
+zero_inflation_alpha: 1
 zero_inflation_beta: 15
 nb_inv_dispersion_shape: 1
 nb_inv_dispersion_scale: 4
 depth_size_min: 500
-depth_size_max: 10000
+depth_size_max: 7500
 gene_copy_expr_prob_alpha: 10
 gene_copy_expr_prob_beta: 1
+cn_hmm_smoothing_rate: 0.7
 output_path: /home/zemp/kth/thesis/_output/simul
 genecode_path: /home/zemp/kth/thesis/data/gencode_v19_gen_pos.complete.txt
