--- a/config/simul.config
+++ b/config/simul.config
@@ -23,10 +23,10 @@ randomize_cf: 1
 min_cf: 0.05
 snv_sc_sparsity: 1
 n_genes: 1000
-size_factor_min: 500
-size_factor_max: 7500
+depth_sf_ratio: 178972.8
+norm_model: 0
 gene_copy_expr_prob_alpha: 10
 gene_copy_expr_prob_beta: 1
 cn_hmm_smoothing_rate: 0.7
-output_path: /home/zemp/kth/thesis/_output/simul
+output_path: /home/zemp/kth/thesis/R/data
 genecode_path: /home/zemp/kth/thesis/data/gencode_v19_gen_pos.complete.txt
