fix: sensitive analysis likelihood computation

--- a/config/simul.config
+++ b/config/simul.config
@@ -22,9 +22,13 @@ randomize_branching: 0
 randomize_cf: 1
 min_cf: 0.05
 snv_sc_sparsity: 1
-n_genes: 1000
+n_genes: 15000
+zero_inflation_alpha: 1
+zero_inflation_beta: 15
+nb_inv_dispersion_shape: 1
+nb_inv_dispersion_scale: 4
 depth_sf_ratio: 178972.8
-norm_model: 0
+norm_model: 1
 gene_copy_expr_prob_alpha: 10
 gene_copy_expr_prob_beta: 1
 cn_hmm_smoothing_rate: 0.7
