Removing boost version number. Adding load_modules.sh script as an example.

--- a/simulation/CMakeLists.txt
+++ b/simulation/CMakeLists.txt
@@ -2,7 +2,7 @@
 include_directories(/usr/local/include/ ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/eigen/)
 
 find_package (PkgConfig REQUIRED)
-find_package(Boost 1.61 COMPONENTS regex system filesystem program_options REQUIRED)
+find_package(Boost COMPONENTS regex system filesystem program_options REQUIRED)
 find_package (GSL REQUIRED)
 #find_package(Eigen3 REQUIRED)
 if(Boost_FOUND)
